@startuml model - vue

' =============================
' === PARAMÈTRES GLOBAUX ===
' =============================
skinparam ranksep 100
skinparam nodesep 80
skinparam linetype ortho
left to right direction

' =============================
' === MODELE (Model) ===
' =============================
package "Model" #DDFFDD {

  enum Univers {
    FANTASY
    SCIENCE_FICTION
    HISTORIQUE
    MODERNE
    POST_APOCALYPTIQUE
  }

  abstract class Sujet {
    -List<Observateur> observateurs
    +attache(Observateur o)
    +detache(Observateur o)
    +informe()
  }

  interface Observateur {
    +miseAJour()
  }

  class Joueur {
    -int id
    -String pseudo
    -List<Personnage> personnages
    -List<Partie> partiesMJ
    +Personnage creerPersonnage(String nom, String naissanceDate, String profession, Univers univers, Biographie bioInitiale)
    +Partie proposerPartie(String titre, Univers univers, String resume)
    +void validerEpisode(Episode e)
  }

  class Personnage {
    -int id
    -String nom
    -String profession
    -String naissanceDate
    -String imagePath
    -int partieId
    +void supprimer()
  }

  class Partie {
    -int id
    -String titre
    -String resume
    -boolean validee
    -boolean dejaJouee
    -int mjId
    +void valider()
    +void ajouterPersonnage(Personnage p)
    +void supprimerPersonnage(Personnage p)
    +void jouer()
  }

  class Biographie {
    -int id
    -String titre
    -int personnageId
    +void ajouterEpisode(Episode e)
  }

  class Episode {
    -int id
    -String titre
    -boolean joueurValide
    -boolean mjValide
    -String dateCreation
    -int biographieId
    -int aventureId
    +void ajouterParagraphe(Paragraphe p)
    +void valider()
  }

  class Paragraphe {
    -int id
    -String titre
    -String contenu
    -boolean isPrivate
    +void rendrePublique()
  }

  ' --- RELATIONS D'HÉRITAGE (PATTERN OBSERVER) ---
  Sujet <|-- Joueur
  Sujet <|-- Partie
  Sujet <|-- Personnage
  Sujet <|-- Biographie
  Sujet <|-- Episode
  Sujet <|-- Paragraphe

}

' =============================
' === VUE (View) ===
' =============================
package "View" #DDEEFF {
  package "joueur" {
    class VueConnexion {
    }

    class VueJoueur {
    }

    class VueAccueil{
    }
  }
  package "biographie" {
    class VueBiographie {
    }
  }
  package "partie" {
    class VuePartie {
    }

    class VueAjouterPartie {

    }

  }
  package "personnage" {
    class VuePersonnage {
    }
    
    class VueAjouterPersonnage {

    }
  }

  abstract class Vue {
    +afficher()
    +doitEtreAfficher()
    +setBesoinAffichage()
  }

  class VueConfirmation {

  }

  Vue <|-[#9E9E9E]- VueConfirmation
  Vue <|-[#9E9E9E]- VueConnexion
  Vue <|-[#9E9E9E]- VueJoueur
  Vue <|-[#9E9E9E]- VueAccueil
  Vue <|-[#9E9E9E]- VueBiographie
  Vue <|-[#9E9E9E]- VuePartie
  Vue <|-[#9E9E9E]- VueAjouterPartie
  Vue <|-[#9E9E9E]- VuePersonnage
  Vue <|-[#9E9E9E]- VueAjouterPersonnage
}

Observateur <|.. VuePartie
Observateur <|.. VueBiographie
Observateur <|.. VueJoueur

VuePartie .[#blue].> Partie : observe >
VueBiographie .[#blue].> Biographie : observe >
VueBiographie .[#blue].> Episode : observe >
VueBiographie .[#blue].> Paragraphe : observe >
VueJoueur .[#blue].> Joueur : observe >
@enduml